--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,10 @@ body {
   cursor: pointer;
   padding: 0.6rem;
 }
+.thumbnail-btn {
+  border: none;
+  background: none;
+}
 /********* Header Section ********/
 
 .header {
@@ -181,23 +185,43 @@ body {
   margin: 2rem;
 }
 .main-img-container {
+  position: relative;
   width: 100%;
-  background: url(./images/image-product-1.jpg) center / cover no-repeat;
+  background-image: url(./images/image-product-1.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   aspect-ratio: 1 / 1;
   border-radius: 2rem;
   margin-bottom: 2rem;
 }
+.main-img-btn {
+  border-radius: 50%;
+  border: none;
+  padding: 1rem;
+  position: absolute;
+  transform: translateY(-50%);
+  background-color: var(--color-White);
+  top: 50%;
+}
+.btn-prev {
+  left: -4%;
+}
+.btn-next {
+  right: -4%;
+}
 .thumbnail-container {
   display: flex;
   justify-content: space-between;
+  gap: 2rem;
 }
 .thumbnail-img {
-  width: 20%;
+  width: 100%;
   border-radius: 1.2rem;
 }
-.thumbnail-img.active {
+.thumbnail-btn.active {
   filter: brightness(1.12) opacity(0.75);
-  border: 0.3rem solid var(--color-Orange);
+  /* border: 0.3rem solid var(--color-Orange); */
 }
 /********* Description Section ********/
 
@@ -339,8 +363,20 @@ body {
   .main__container-imgs {
     margin: 0;
   }
+
   .main-img-container {
+    position: relative;
     aspect-ratio: 3/2;
+  }
+  .main-img-btn {
+    padding: 0.6rem;
+    border-radius: 50%;
+  }
+  .btn-next {
+    right: 2%;
+  }
+  .btn-prev {
+    left: 2%;
   }
   .thumbnail-container {
     display: none;
@@ -366,4 +402,7 @@ body {
     flex-direction: column;
     align-items: stretch;
   }
+}
+*:focus-visible {
+  outline: 2px solid var(--color-Pale-orange);
 }
