--- a/styles.css
+++ b/styles.css
@@ -194,6 +194,11 @@ body {
   aspect-ratio: 1 / 1;
   border-radius: 2rem;
   margin-bottom: 2rem;
+  transition: opacity 0.4s ease;
+  opacity: 1;
+}
+.main-img-container.fading {
+  opacity: 0.5;
 }
 .main-img-btn {
   border-radius: 50%;
@@ -217,11 +222,17 @@ body {
 }
 .thumbnail-img {
   width: 100%;
+  height: 100%;
+}
+.thumbnail-btn {
+  overflow: hidden;
+  transition: filter 0.3s ease-in;
   border-radius: 1.2rem;
 }
+
 .thumbnail-btn.active {
   filter: brightness(1.12) opacity(0.75);
-  /* border: 0.3rem solid var(--color-Orange); */
+  border: 0.3rem solid var(--color-Orange);
 }
 /********* Description Section ********/
 
@@ -300,12 +311,12 @@ body {
 .btn-primary:hover,
 .btn-primary:active {
   background-color: var(--color-Pale-orangeA);
-  box-shadow: 0px 0px 8px 0px var(--color-Pale-orangeA);
+  /* box-shadow: 0px 0px 8px 0px var(--color-Pale-orangeA); */
 }
-.btn-logo {
+/* .btn-logo {
   stroke: var(--color-Very-dark-blue);
   fill: var(--color-Very-dark-blue);
-}
+} */
 .btn-checkout {
   padding: 1rem 0;
   font-size: var(--font-size-sm);
@@ -342,6 +353,7 @@ body {
     padding: 2rem;
     transition: transform 0.4s ease-in;
     transform: translateX(-100%);
+    z-index: 5;
   }
   .header__nav.active {
     transform: translateX(0);
@@ -369,7 +381,7 @@ body {
     aspect-ratio: 3/2;
   }
   .main-img-btn {
-    padding: 0.6rem;
+    padding: 1rem;
     border-radius: 50%;
   }
   .btn-next {
