--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,26 @@ body {
   visibility: visible;
   overflow: auto;
 }
+.btn-cart {
+  position: relative;
+}
+.cart-quantity {
+  transform: scaleY(0);
+  font-size: var(--font-size-xs);
+  visibility: hidden;
+  position: absolute;
+  color: var(--color-White);
+  background-color: var(--color-Orange);
+  padding: 2px 6px;
+  border-radius: 40%;
+  top: -10%;
+  right: -5%;
+  transition: height 0.3s;
+}
+.cart-quantity.active {
+  transform: scaleY(1);
+  visibility: visible;
+}
 .cart-heading {
   border-bottom: 1px solid var(--color-Grayish-blue);
   padding-bottom: 1rem;
